--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <nav></nav>
+  </body>
 </html>
