--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <title>Document</title>
   </head>
   <body>
-    <nav></nav>
+    <nav>
+      <div class="logo">
+        <div class="circle"></div>
+        <div class="tictac"></div>
+      </div>
+      <ul>
+        <li><a href="">About</a></li>
+        <li><a href="">Help</a></li>
+        <li><a href="">Features</a></li>
+        <li><a href="">Signup</a></li>
+      </ul>
+    </nav>
   </body>
 </html>
