--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/dbd5552919.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Document</title>
   </head>
   <body>
@@ -14,12 +18,16 @@
         <div class="circle"></div>
         <div class="tictac"></div>
       </div>
-      <ul>
-        <li><a href="">About</a></li>
-        <li><a href="">Help</a></li>
-        <li><a href="">Features</a></li>
-        <li><a href="">Signup</a></li>
+      <ul class="navigation">
+        <li><a href="#">About</a></li>
+        <li><a href="#">Help</a></li>
+        <li><a href="#">Features</a></li>
+        <li><a href="#">Signup</a></li>
       </ul>
+      <div class="right">
+        <p>Request Demo</p>
+        <i class="fa-solid fa-arrow-right"></i>
+      </div>
     </nav>
   </body>
 </html>
