--- a/index.html
+++ b/index.html
@@ -29,5 +29,15 @@
         <i class="fa-solid fa-arrow-right"></i>
       </div>
     </nav>
+    <section class="landing-page">
+      <h1>Save your data storage here.</h1>
+      <p>
+        Data Warehouse is a data storage area that has been tested for security,
+        so you can store your data here safely but not be afraid of being stolen
+        by others.
+      </p>
+      <a href="#">Learn more</a>
+      <img src="./images/mainphoto.png" alt="mainphoto" />
+    </section>
   </body>
 </html>
