--- a/index.html
+++ b/index.html
@@ -30,13 +30,15 @@
       </div>
     </nav>
     <section class="landing-page">
-      <h1>Save your data storage here.</h1>
-      <p>
-        Data Warehouse is a data storage area that has been tested for security,
-        so you can store your data here safely but not be afraid of being stolen
-        by others.
-      </p>
-      <a href="#">Learn more</a>
+      <div class="landing-left">
+        <h1>Save your data storage here.</h1>
+        <p class="main-about">
+          Data Warehouse is a data storage area that has been tested for
+          security, so you can store your data here safely but not be afraid of
+          being stolen by others.
+        </p>
+        <a class="main-button" href="#">Learn more</a>
+      </div>
       <img src="./images/mainphoto.png" alt="mainphoto" />
     </section>
   </body>
