--- a/index.html
+++ b/index.html
@@ -39,7 +39,33 @@
         </p>
         <a class="main-button" href="#">Learn more</a>
       </div>
-      <img src="./images/mainphoto.png" alt="mainphoto" />
+      <img class="photo-one" src="./images/mainphoto.png" alt="mainphoto" />
+    </section>
+    <section class="offer">
+      <div class="container">
+        <img
+          class="photo-two"
+          src="./images/secondphoto.png"
+          alt="secondphoto"
+        />
+        <div class="pink-textbox">
+          <h2 class="pink-header">We are a high-level data storage bank</h2>
+          <p class="pink-about">
+            The place to store various data that you can access at any time
+            through the internet and where you can carry it. This very flexible
+            storage area has a high level of security. To enter into your own
+            data you must enter the password that you created when you
+            registered in this Data Warehouse.
+          </p>
+        </div>
+      </div>
+      <div class="features">
+        <h2 class="header-features">Features</h2>
+        <p class="about-features">
+          Some of the features and advantages that we provide for those of you
+          who store data in this Data Warehouse.
+        </p>
+      </div>
     </section>
   </body>
 </html>
