--- a/index.html
+++ b/index.html
@@ -67,5 +67,8 @@
         </p>
       </div>
     </section>
+    <section class="trapezoid">
+      <div class="grid-box"></div>
+    </section>
   </body>
 </html>
