--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <ul class="navigation">
         <li><a href="#">About</a></li>
         <li><a href="#">Help</a></li>
-        <li><a href="#">Features</a></li>
+        <li><a href="#features">Features</a></li>
         <li><a href="#">Signup</a></li>
       </ul>
       <div class="right">
@@ -59,7 +59,7 @@
           </p>
         </div>
       </div>
-      <div class="features">
+      <div class="features" id="features">
         <h2 class="header-features">Features</h2>
         <p class="about-features">
           Some of the features and advantages that we provide for those of you
