--- a/index.html
+++ b/index.html
@@ -70,5 +70,6 @@
     <section class="trapezoid">
       <div class="grid-box"></div>
     </section>
+    <div class="line"></div>
   </body>
 </html>
