--- a/index.html
+++ b/index.html
@@ -71,5 +71,22 @@
       <div class="grid-box"></div>
     </section>
     <div class="line"></div>
+    <footer>
+      <div class="container-box">
+        <div class="footer-textbox">
+          <h2 class="footer-heading">Try for free!</h2>
+          <p class="footer-paragraph">
+            Get limited 1 week free try our features!
+          </p>
+        </div>
+        <div class="buttons">
+          <a class="main-button" href="#">Learn more</a>
+          <div class="right">
+            <p>Request Demo</p>
+            <i class="fa-solid fa-arrow-right"></i>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
