--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
           </p>
         </div>
         <div class="buttons">
-          <a class="main-button" href="#">Learn more</a>
-          <div class="right">
+          <a class="footer-button-one" href="#">Learn more</a>
+          <div class="footer-button-two">
             <p>Request Demo</p>
             <i class="fa-solid fa-arrow-right"></i>
           </div>
