--- a/index.html
+++ b/index.html
@@ -66,6 +66,22 @@
           who store data in this Data Warehouse.
         </p>
       </div>
+      <section class="rectangle">
+        <div class="grid-container">
+          <div class="grid-image-one">
+            <img src="./images/rectangle-green.png" alt="rectangle-green" />
+            <div class="rectangle-right">
+              <h3>Search Data</h3>
+              <p>
+                Don't worry if your data is very large, the Data Warehoue
+                provides a search engine, which is useful for making it easier
+                to find data effectively saving time.
+              </p>
+              <a class="footer-button-one" href="#">Learn more</a>
+            </div>
+          </div>
+        </div>
+      </section>
     </section>
     <section class="trapezoid">
       <div class="grid-box"></div>
