--- a/index.html
+++ b/index.html
@@ -69,15 +69,17 @@
       <section class="rectangle">
         <div class="grid-container">
           <div class="grid-image-one">
-            <img src="./images/rectangle-green.png" alt="rectangle-green" />
             <div class="rectangle-right">
-              <h3>Search Data</h3>
-              <p>
+              <h3 class="rectangle-heading">Search Data</h3>
+              <p class="rectangle-text">
                 Don't worry if your data is very large, the Data Warehoue
                 provides a search engine, which is useful for making it easier
                 to find data effectively saving time.
               </p>
-              <a class="footer-button-one" href="#">Learn more</a>
+              <div class="footer-button-two">
+                <p>Request Demo</p>
+                <i class="fa-solid fa-arrow-right"></i>
+              </div>
             </div>
           </div>
         </div>
