--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
       <img class="photo-one" src="./images/mainphoto.png" alt="mainphoto" />
     </section>
-    <section class="offer">
+    <section class="about">
       <div class="container">
         <img
           class="photo-two"
@@ -66,27 +66,118 @@
           who store data in this Data Warehouse.
         </p>
       </div>
-      <section class="rectangle">
-        <div class="grid-container">
-          <div class="grid-image-one">
-            <div class="rectangle-right">
-              <h3 class="rectangle-heading">Search Data</h3>
-              <p class="rectangle-text">
+    </section>
+    <section class="learn-more">
+      <div class="lm-container">
+        <div class="offer-grid">
+          <div class="offer-one green">
+            <img class="offer-photo-one" src="./images/photo-one.png" alt="" />
+            <img class="vector one" src="./images/vector-one.png" alt="" />
+            <div class="textbox-offer">
+              <h3 class="offer-heading">Search Data</h3>
+              <p class="offer-paragraph">
                 Don't worry if your data is very large, the Data Warehoue
                 provides a search engine, which is useful for making it easier
                 to find data effectively saving time.
               </p>
-              <div class="footer-button-two">
-                <p>Request Demo</p>
+              <div class="offer-button">
+                <p class="button-text-offer">Learn more</p>
+                <i class="fa-solid fa-arrow-right"></i>
+              </div>
+            </div>
+          </div>
+          <div class="offer-one purple">
+            <img class="offer-photo-two" src="./images/photo-two.png" alt="" />
+            <img class="vector two" src="./images/vector-two.png" alt="" />
+            <div class="textbox-offer">
+              <h3 class="offer-heading">24 Hours Access</h3>
+              <p class="offer-paragraph">
+                Access is given 24 hours a full morning to night and meet again
+                in the morning, giving you comfort when you need data when
+                urgent.
+              </p>
+              <div class="offer-button">
+                <p class="button-text-offer">Learn more</p>
+                <i class="fa-solid fa-arrow-right"></i>
+              </div>
+            </div>
+          </div>
+          <div class="offer-one pink">
+            <img
+              class="offer-photo-three"
+              src="./images/photo-three.png"
+              alt=""
+            />
+            <img class="vector three" src="./images/vector-three.png" alt="" />
+            <div class="textbox-offer">
+              <h3 class="offer-heading">Print Out</h3>
+              <p class="offer-paragraph">
+                Print out service gives you convenience if someday you need
+                print data, just edit it all and just print it.
+              </p>
+              <div class="offer-button">
+                <p class="button-text-offer">Learn more</p>
+                <i class="fa-solid fa-arrow-right"></i>
+              </div>
+            </div>
+          </div>
+          <div class="offer-one blue">
+            <img
+              class="offer-photo-four"
+              src="./images/photo-four.png"
+              alt=""
+            />
+            <img class="vector four" src="./images/vector-four.png" alt="" />
+            <div class="textbox-offer">
+              <h3 class="offer-heading">Security Code</h3>
+              <p class="offer-paragraph">
+                Data Security is one of our best facilities. Allows for your
+                files to be safer. The file can be secured with a code or
+                password that you created, so only you can open the file.
+              </p>
+              <div class="offer-button">
+                <p class="button-text-offer">Learn more</p>
                 <i class="fa-solid fa-arrow-right"></i>
               </div>
             </div>
           </div>
         </div>
-      </section>
+      </div>
     </section>
-    <section class="trapezoid">
-      <div class="grid-box"></div>
+    <section class="slider">
+      <div class="slider-container">
+        <h2 class="slider-heading">Testimonials</h2>
+        <div class="slider-boxes">
+          <div class="box-one">
+            <img
+              class="person-one"
+              src="./images/personone.png"
+              alt="Photo of John Fang"
+            />
+            <div class="slider-textbox">
+              <h3 class="full-name">John Fang</h3>
+              <p class="slider-sub">wordfaang.com</p>
+              <p class="slider-about">
+                Suspendisse ultrices at diam lectus nullam. Nisl, sagittis
+                viverra enim erat tortor ultricies massa turpis. Arcu pulvinar
+                aenean nam laoreet nulla.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="slider-shapes">
+          <div class="dots">
+            <div class="pink-dot"></div>
+            <div class="white-dot"></div>
+            <div class="white-dot"></div>
+            <div class="white-dot"></div>
+          </div>
+          <div class="arrows">
+            <i class="fa-solid fa-arrow-left-long"></i>
+            <i id="white-arrow" class="fa-solid fa-arrow-right"></i>
+          </div>
+        </div>
+      </div>
     </section>
     <div class="line"></div>
     <footer>
