--- a/index.html
+++ b/index.html
@@ -30,16 +30,18 @@
       </div>
     </nav>
     <section class="landing-page">
-      <div class="landing-left">
-        <h1>Save your data storage here.</h1>
-        <p class="main-about">
-          Data Warehouse is a data storage area that has been tested for
-          security, so you can store your data here safely but not be afraid of
-          being stolen by others.
-        </p>
-        <a class="main-button" href="#">Learn more</a>
+      <div class="landing-container">
+        <div class="landing-left">
+          <h1>Save your data storage here.</h1>
+          <p class="main-about">
+            Data Warehouse is a data storage area that has been tested for
+            security, so you can store your data here safely but not be afraid
+            of being stolen by others.
+          </p>
+          <a class="main-button" href="#">Learn more</a>
+        </div>
+        <img class="photo-one" src="./images/mainphoto.png" alt="mainphoto" />
       </div>
-      <img class="photo-one" src="./images/mainphoto.png" alt="mainphoto" />
     </section>
     <section class="about">
       <div class="container">
@@ -164,6 +166,36 @@
               </p>
             </div>
           </div>
+          <div class="box-two">
+            <img
+              class="person-one"
+              src="./images/persontwo.png"
+              alt="Photo of Jeny Doe"
+            />
+            <div class="slider-textbox">
+              <h3 class="full-name">Jeny Doe</h3>
+              <p class="slider-sub">UX Engineer</p>
+              <p class="slider-about-two">
+                Suspendisse ultrices at diam lectus nullam. Nisl, sagittis
+                viverra enim erat tortor
+              </p>
+            </div>
+          </div>
+          <div class="box-three">
+            <img
+              class="person-one"
+              src="./images/personthree.png"
+              alt="Photo of William"
+            />
+            <div class="slider-textbox">
+              <h3 class="full-name">William</h3>
+              <p class="slider-sub">Web Designer</p>
+              <p class="slider-about-two">
+                Suspendisse ultrices at diam lectus nullam. Nisl, sagittis
+                viverra enim erat tortor
+              </p>
+            </div>
+          </div>
         </div>
         <div class="slider-shapes">
           <div class="dots">
@@ -182,18 +214,27 @@
     <div class="line"></div>
     <footer>
       <div class="container-box">
-        <div class="footer-textbox">
-          <h2 class="footer-heading">Try for free!</h2>
-          <p class="footer-paragraph">
-            Get limited 1 week free try our features!
-          </p>
-        </div>
-        <div class="buttons">
-          <a class="footer-button-one" href="#">Learn more</a>
-          <div class="footer-button-two">
-            <p>Request Demo</p>
-            <i class="fa-solid fa-arrow-right"></i>
+        <div class="footer-one">
+          <div class="footer-textbox">
+            <h2 class="footer-heading">Try for free!</h2>
+            <p class="footer-paragraph">
+              Get limited 1 week free try our features!
+            </p>
           </div>
+          <div class="buttons">
+            <a class="footer-button-one" href="#">Learn more</a>
+            <div class="footer-button-two">
+              <p>Request Demo</p>
+              <i class="fa-solid fa-arrow-right"></i>
+            </div>
+          </div>
+        </div>
+        <div class="footer-three">
+          <p class="all-rights">
+            &copy; Datawarehouse&trade;, 2020. All rights reserved. Company
+            Registration Number: 21479524.
+          </p>
+          <i class="fa-solid fa-comment-dots"></i>
         </div>
       </div>
     </footer>
