--- a/index.html
+++ b/index.html
@@ -229,6 +229,37 @@
             </div>
           </div>
         </div>
+        <div class="footer-two">
+          <div class="one-of-four">
+            <div class="logo-footer">
+              <div class="circle-footer"></div>
+              <div class="tictac"></div>
+              <h3 class="comp-name">DataWarehouse</h3>
+            </div>
+            <p class="address">Warehouse Society, 234</p>
+            <p class="info">info@warehouse.project</p>
+          </div>
+          <div class="two-of-four">
+            <ul>
+              <li class="list-one">About</li>
+              <li class="list-two">Profile</li>
+              <li class="list-two">Features</li>
+              <li class="list-two">Careers</li>
+              <li class="list-two">DW News</li>
+            </ul>
+          </div>
+          <div class="three-of-four">
+            <ul>
+              <li class="list-one">Help</li>
+              <li class="list-two">Support</li>
+              <li class="list-two">Sign up</li>
+              <li class="list-two">Guide</li>
+              <li class="list-two">Reports</li>
+              <li class="list-two">Q&amp;A</li>
+            </ul>
+          </div>
+          <div class="four-of-four"></div>
+        </div>
         <div class="footer-three">
           <p class="all-rights">
             &copy; Datawarehouse&trade;, 2020. All rights reserved. Company
