need fonts commit

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <div class="slider-container">
         <h2 class="slider-heading">Testimonials</h2>
         <div class="slider-boxes">
-          <div class="box-one">
+          <div class="box-one offer-highlight">
             <img
               class="person-one"
               src="./images/personone.png"
@@ -166,6 +166,7 @@
               </p>
             </div>
           </div>
+          <div class="two-gradient"></div>
           <div class="box-two">
             <img
               class="person-one"
@@ -175,6 +176,7 @@
             <div class="slider-textbox">
               <h3 class="full-name">Jeny Doe</h3>
               <p class="slider-sub">UX Engineer</p>
+              <div class="about-gradient"></div>
               <p class="slider-about-two">
                 Suspendisse ultrices at diam lectus nullam. Nisl, sagittis
                 viverra enim erat tortor
@@ -190,6 +192,7 @@
             <div class="slider-textbox">
               <h3 class="full-name">William</h3>
               <p class="slider-sub">Web Designer</p>
+              <div class="about-gradient"></div>
               <p class="slider-about-two">
                 Suspendisse ultrices at diam lectus nullam. Nisl, sagittis
                 viverra enim erat tortor
@@ -258,7 +261,14 @@
               <li class="list-two">Q&amp;A</li>
             </ul>
           </div>
-          <div class="four-of-four"></div>
+          <div class="four-of-four">
+            <p class="socials">Social Media</p>
+            <div class="three-icons">
+              <i class="fa-brands fa-facebook-f"></i>
+              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-brands fa-instagram"></i>
+            </div>
+          </div>
         </div>
         <div class="footer-three">
           <p class="all-rights">
