--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;500;800;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
     <script
       src="https://kit.fontawesome.com/dbd5552919.js"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <title>Datawarehouse Website</title>
   </head>
   <body>
     <nav>
@@ -19,17 +25,17 @@
         <div class="tictac"></div>
       </div>
       <ul class="navigation">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Help</a></li>
-        <li><a href="#features">Features</a></li>
-        <li><a href="#">Signup</a></li>
+        <li><a class="b-nav" href="#">About</a></li>
+        <li><a class="a-nav" href="#">Help</a></li>
+        <li><a class="a-nav" href="#features">Features</a></li>
+        <li><a class="a-nav" href="#">Signup</a></li>
       </ul>
       <div class="right">
-        <p>Request Demo</p>
+        <p class="bt-nav">Request Demo</p>
         <i class="fa-solid fa-arrow-right"></i>
       </div>
     </nav>
-    <section class="landing-page">
+    <header class="landing-page">
       <div class="landing-container">
         <div class="landing-left">
           <h1>Save your data storage here.</h1>
@@ -42,7 +48,7 @@
         </div>
         <img class="photo-one" src="./images/mainphoto.png" alt="mainphoto" />
       </div>
-    </section>
+    </header>
     <section class="about">
       <div class="container">
         <img
@@ -227,7 +233,7 @@
           <div class="buttons">
             <a class="footer-button-one" href="#">Learn more</a>
             <div class="footer-button-two">
-              <p>Request Demo</p>
+              <p class="bt-text">Request Demo</p>
               <i class="fa-solid fa-arrow-right"></i>
             </div>
           </div>
