--- a/index.html
+++ b/index.html
@@ -249,25 +249,25 @@
           </div>
           <div class="two-of-four">
             <ul>
-              <li class="list-one">About</li>
-              <li class="list-two">Profile</li>
-              <li class="list-two">Features</li>
-              <li class="list-two">Careers</li>
-              <li class="list-two">DW News</li>
+              <li class="list-one"><a class="lists" href="#">About</a></li>
+              <li class="list-two"><a class="lists" href="#">Profile</a></li>
+              <li class="list-two"><a class="lists" href="#">Features</a></li>
+              <li class="list-two"><a class="lists" href="#">Careers</a></li>
+              <li class="list-two"><a class="lists" href="#">DW News</a></li>
             </ul>
           </div>
           <div class="three-of-four">
             <ul>
-              <li class="list-one">Help</li>
-              <li class="list-two">Support</li>
-              <li class="list-two">Sign up</li>
-              <li class="list-two">Guide</li>
-              <li class="list-two">Reports</li>
-              <li class="list-two">Q&amp;A</li>
+              <li class="list-one"><a class="lists" href="#">Help</a></li>
+              <li class="list-two"><a class="lists" href="#">Support</a></li>
+              <li class="list-two"><a class="lists" href="#">Sign up</a></li>
+              <li class="list-two"><a class="lists" href="#">Guide</a></li>
+              <li class="list-two"><a class="lists" href="#">Reports</a></li>
+              <li class="list-two"><a class="lists" href="#">Q&amp;A</a></li>
             </ul>
           </div>
           <div class="four-of-four">
-            <p class="socials">Social Media</p>
+            <p class="socials"><a class="lists" href="#">Social Media</a></p>
             <div class="three-icons">
               <i class="fa-brands fa-facebook-f"></i>
               <i class="fa-brands fa-twitter"></i>
