--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
         <li><a class="a-nav" href="#features">Features</a></li>
         <li><a class="a-nav" href="#">Signup</a></li>
       </ul>
-      <div class="right">
-        <p class="bt-nav">Request Demo</p>
-        <i class="fa-solid fa-arrow-right"></i>
-      </div>
+      <a href="#">
+        <div class="right">
+          <p class="bt-nav">Request Demo</p>
+          <i class="fa-solid fa-arrow-right"></i></div
+      ></a>
     </nav>
     <header class="landing-page">
       <div class="landing-container">
@@ -88,10 +89,11 @@
                 provides a search engine, which is useful for making it easier
                 to find data effectively saving time.
               </p>
-              <div class="offer-button">
-                <p class="button-text-offer">Learn more</p>
-                <i class="fa-solid fa-arrow-right"></i>
-              </div>
+              <a href="#">
+                <div class="offer-button">
+                  <p class="button-text-offer">Learn more</p>
+                  <i class="fa-solid fa-arrow-right"></i></div
+              ></a>
             </div>
           </div>
           <div class="offer-one purple">
@@ -104,10 +106,11 @@
                 in the morning, giving you comfort when you need data when
                 urgent.
               </p>
-              <div class="offer-button">
-                <p class="button-text-offer">Learn more</p>
-                <i class="fa-solid fa-arrow-right"></i>
-              </div>
+              <a href="#">
+                <div class="offer-button">
+                  <p class="button-text-offer">Learn more</p>
+                  <i class="fa-solid fa-arrow-right"></i></div
+              ></a>
             </div>
           </div>
           <div class="offer-one pink">
@@ -123,10 +126,11 @@
                 Print out service gives you convenience if someday you need
                 print data, just edit it all and just print it.
               </p>
-              <div class="offer-button">
-                <p class="button-text-offer">Learn more</p>
-                <i class="fa-solid fa-arrow-right"></i>
-              </div>
+              <a href="#">
+                <div class="offer-button">
+                  <p class="button-text-offer">Learn more</p>
+                  <i class="fa-solid fa-arrow-right"></i></div
+              ></a>
             </div>
           </div>
           <div class="offer-one blue">
@@ -143,10 +147,11 @@
                 files to be safer. The file can be secured with a code or
                 password that you created, so only you can open the file.
               </p>
-              <div class="offer-button">
-                <p class="button-text-offer">Learn more</p>
-                <i class="fa-solid fa-arrow-right"></i>
-              </div>
+              <a href="#">
+                <div class="offer-button">
+                  <p class="button-text-offer">Learn more</p>
+                  <i class="fa-solid fa-arrow-right"></i></div
+              ></a>
             </div>
           </div>
         </div>
@@ -231,10 +236,11 @@
           </div>
           <div class="buttons">
             <a class="footer-button-one" href="#">Learn more</a>
-            <div class="footer-button-two">
-              <p class="bt-text">Request Demo</p>
-              <i class="fa-solid fa-arrow-right"></i>
-            </div>
+            <a href="#">
+              <div class="footer-button-two">
+                <p class="bt-text">Request Demo</p>
+                <i class="fa-solid fa-arrow-right"></i></div
+            ></a>
           </div>
         </div>
         <div class="footer-two">
@@ -269,9 +275,9 @@
           <div class="four-of-four">
             <p class="socials"><a class="lists" href="#">Social Media</a></p>
             <div class="three-icons">
-              <i class="fa-brands fa-facebook-f"></i>
-              <i class="fa-brands fa-twitter"></i>
-              <i class="fa-brands fa-instagram"></i>
+              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              <a href="#"><i class="fa-brands fa-instagram"></i></a>
             </div>
           </div>
         </div>
@@ -280,7 +286,7 @@
             &copy; Datawarehouse&trade;, 2020. All rights reserved. Company
             Registration Number: 21479524.
           </p>
-          <i class="fa-solid fa-comment-dots"></i>
+          <a href="#"><i class="fa-solid fa-comment-dots"></i></a>
         </div>
       </div>
     </footer>
